@@ -13949,5 +13949,9 @@ Matched, but too many substrings
     g\=ovector=1 
 Matched, but too many substrings
  0: g
+    
+# This pattern showed up a compile-time bug
+
+"((?2){0,1999}())?"
 
 # End of testinput2 
